# cg19

./: .gitignore  config.json  topology.json
cg3_u3/: CMakeLists.txt
cg3_u3/scg3/: .gitignore  scg3.h
cg3_u3/scg3/models/: hannover.mtl
cg3_u3/scg3/shaders/: FireShader.glsl  blinn_phong_lighting.glsl  blinn_phong_lighting_inner.glsl  phong_frag_inner.glsl  phong_inner_frag.glsl  phong_inner_vert.glsl  phong_vert_inner.glsl
cg3_u3/scg3/src/: CameraController.cpp  CameraController.h  Composite.h  EnvoirementHelper.cpp  EnvoirementHelper.h  GameLogic.cpp  GameLogic.h  GeometryCoreFactory.cpp  GeometryCoreFactory.h  KeyboardController.cpp  KeyboardController.h  MatFactory.cpp  MatFactory.h  ObjectController.cpp  ObjectController.h  SceneObjetFactory.cpp  SceneObjetFactory.h  ShaderFactory.cpp  ShaderFactory.h  TexturFactory.cpp  TexturFactory.h  TexturHelper.cpp  TexturHelper.h  TransformAnimation.cpp  TransformAnimation.h  Transformation.cpp  Transformation.h  Viewer.cpp  Viewer.h  scg_internals.h
cg3_u3/scg3_example/: .gitignore  CMakeLists.txt  main.cpp
cg3_u3/scg3_example/src/: EnvoirementController.cpp  EnvoirementController.h  FloorKeyboardController.cpp  FloorKeyboardController.h  GameLogic.cpp  GameLogic.h  LightFactory.cpp  LightFactory.h  MatFactory.cpp  MatFactory.h  SceneObjetFactory.cpp  SceneObjetFactory.h  ShaderFactory.cpp  ShaderFactory.h  Steuerung.cpp  Steuerung.h  TexturFactory.cpp  TexturFactory.h  TorusFactory.cpp  TorusFactory.h  TransfomationExt.cpp  TransfomationExt.h  VideoKeyboardController.cpp  VideoKeyboardController.h  videoKeyboardController.cpp  videoKeyboardController.h
