cmake_minimum_required(VERSION 3.10)
project(cg3_u3)

set(CMAKE_CXX_STANDARD 14)

include_directories(scg3)
include_directories(scg3/extern/glew/include)
include_directories(scg3/extern/glew/include/GL)
include_directories(scg3/extern/glm/glm)
include_directories(scg3/extern/glm/glm/detail)
include_directories(scg3/extern/glm/glm/ext)
include_directories(scg3/extern/glm/glm/gtc)
include_directories(scg3/extern/glm/glm/gtx)
include_directories(scg3/extern/glm/glm/simd)
include_directories(scg3/extern/stb_image)
include_directories(scg3/src)
include_directories(scg3/src_ext)

add_executable(cg3_u3
        scg3/extern/glew/include/GL/eglew.h
        scg3/extern/glew/include/GL/glew.h
        scg3/extern/glew/include/GL/glxew.h
        scg3/extern/glew/include/GL/wglew.h
        scg3/extern/glew/src/glew.c
        scg3/extern/glm/glm/detail/_features.hpp
        scg3/extern/glm/glm/detail/_fixes.hpp
        scg3/extern/glm/glm/detail/_noise.hpp
        scg3/extern/glm/glm/detail/_swizzle.hpp
        scg3/extern/glm/glm/detail/_swizzle_func.hpp
        scg3/extern/glm/glm/detail/_vectorize.hpp
        scg3/extern/glm/glm/detail/compute_common.hpp
        scg3/extern/glm/glm/detail/compute_vector_relational.hpp
        scg3/extern/glm/glm/detail/func_common.inl
        scg3/extern/glm/glm/detail/func_common_simd.inl
        scg3/extern/glm/glm/detail/func_exponential.inl
        scg3/extern/glm/glm/detail/func_exponential_simd.inl
        scg3/extern/glm/glm/detail/func_geometric.inl
        scg3/extern/glm/glm/detail/func_geometric_simd.inl
        scg3/extern/glm/glm/detail/func_integer.inl
        scg3/extern/glm/glm/detail/func_integer_simd.inl
        scg3/extern/glm/glm/detail/func_matrix.inl
        scg3/extern/glm/glm/detail/func_matrix_simd.inl
        scg3/extern/glm/glm/detail/func_packing.inl
        scg3/extern/glm/glm/detail/func_packing_simd.inl
        scg3/extern/glm/glm/detail/func_trigonometric.inl
        scg3/extern/glm/glm/detail/func_trigonometric_simd.inl
        scg3/extern/glm/glm/detail/func_vector_relational.inl
        scg3/extern/glm/glm/detail/func_vector_relational_simd.inl
        scg3/extern/glm/glm/detail/glm.cpp
        scg3/extern/glm/glm/detail/qualifier.hpp
        scg3/extern/glm/glm/detail/setup.hpp
        scg3/extern/glm/glm/detail/type_float.hpp
        scg3/extern/glm/glm/detail/type_half.hpp
        scg3/extern/glm/glm/detail/type_half.inl
        scg3/extern/glm/glm/detail/type_mat2x2.hpp
        scg3/extern/glm/glm/detail/type_mat2x2.inl
        scg3/extern/glm/glm/detail/type_mat2x3.hpp
        scg3/extern/glm/glm/detail/type_mat2x3.inl
        scg3/extern/glm/glm/detail/type_mat2x4.hpp
        scg3/extern/glm/glm/detail/type_mat2x4.inl
        scg3/extern/glm/glm/detail/type_mat3x2.hpp
        scg3/extern/glm/glm/detail/type_mat3x2.inl
        scg3/extern/glm/glm/detail/type_mat3x3.hpp
        scg3/extern/glm/glm/detail/type_mat3x3.inl
        scg3/extern/glm/glm/detail/type_mat3x4.hpp
        scg3/extern/glm/glm/detail/type_mat3x4.inl
        scg3/extern/glm/glm/detail/type_mat4x2.hpp
        scg3/extern/glm/glm/detail/type_mat4x2.inl
        scg3/extern/glm/glm/detail/type_mat4x3.hpp
        scg3/extern/glm/glm/detail/type_mat4x3.inl
        scg3/extern/glm/glm/detail/type_mat4x4.hpp
        scg3/extern/glm/glm/detail/type_mat4x4.inl
        scg3/extern/glm/glm/detail/type_mat4x4_simd.inl
        scg3/extern/glm/glm/detail/type_quat.hpp
        scg3/extern/glm/glm/detail/type_quat.inl
        scg3/extern/glm/glm/detail/type_quat_simd.inl
        scg3/extern/glm/glm/detail/type_vec1.hpp
        scg3/extern/glm/glm/detail/type_vec1.inl
        scg3/extern/glm/glm/detail/type_vec2.hpp
        scg3/extern/glm/glm/detail/type_vec2.inl
        scg3/extern/glm/glm/detail/type_vec3.hpp
        scg3/extern/glm/glm/detail/type_vec3.inl
        scg3/extern/glm/glm/detail/type_vec4.hpp
        scg3/extern/glm/glm/detail/type_vec4.inl
        scg3/extern/glm/glm/detail/type_vec4_simd.inl
        scg3/extern/glm/glm/ext/matrix_clip_space.hpp
        scg3/extern/glm/glm/ext/matrix_clip_space.inl
        scg3/extern/glm/glm/ext/matrix_double2x2.hpp
        scg3/extern/glm/glm/ext/matrix_double2x2_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double2x3.hpp
        scg3/extern/glm/glm/ext/matrix_double2x3_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double2x4.hpp
        scg3/extern/glm/glm/ext/matrix_double2x4_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double3x2.hpp
        scg3/extern/glm/glm/ext/matrix_double3x2_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double3x3.hpp
        scg3/extern/glm/glm/ext/matrix_double3x3_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double3x4.hpp
        scg3/extern/glm/glm/ext/matrix_double3x4_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double4x2.hpp
        scg3/extern/glm/glm/ext/matrix_double4x2_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double4x3.hpp
        scg3/extern/glm/glm/ext/matrix_double4x3_precision.hpp
        scg3/extern/glm/glm/ext/matrix_double4x4.hpp
        scg3/extern/glm/glm/ext/matrix_double4x4_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float2x2.hpp
        scg3/extern/glm/glm/ext/matrix_float2x2_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float2x3.hpp
        scg3/extern/glm/glm/ext/matrix_float2x3_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float2x4.hpp
        scg3/extern/glm/glm/ext/matrix_float2x4_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float3x2.hpp
        scg3/extern/glm/glm/ext/matrix_float3x2_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float3x3.hpp
        scg3/extern/glm/glm/ext/matrix_float3x3_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float3x4.hpp
        scg3/extern/glm/glm/ext/matrix_float3x4_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float4x2.hpp
        scg3/extern/glm/glm/ext/matrix_float4x2_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float4x3.hpp
        scg3/extern/glm/glm/ext/matrix_float4x3_precision.hpp
        scg3/extern/glm/glm/ext/matrix_float4x4.hpp
        scg3/extern/glm/glm/ext/matrix_float4x4_precision.hpp
        scg3/extern/glm/glm/ext/matrix_projection.hpp
        scg3/extern/glm/glm/ext/matrix_projection.inl
        scg3/extern/glm/glm/ext/matrix_relational.hpp
        scg3/extern/glm/glm/ext/matrix_relational.inl
        scg3/extern/glm/glm/ext/matrix_transform.hpp
        scg3/extern/glm/glm/ext/matrix_transform.inl
        scg3/extern/glm/glm/ext/quaternion_common.hpp
        scg3/extern/glm/glm/ext/quaternion_common.inl
        scg3/extern/glm/glm/ext/quaternion_common_simd.inl
        scg3/extern/glm/glm/ext/quaternion_double.hpp
        scg3/extern/glm/glm/ext/quaternion_double_precision.hpp
        scg3/extern/glm/glm/ext/quaternion_exponential.hpp
        scg3/extern/glm/glm/ext/quaternion_exponential.inl
        scg3/extern/glm/glm/ext/quaternion_float.hpp
        scg3/extern/glm/glm/ext/quaternion_float_precision.hpp
        scg3/extern/glm/glm/ext/quaternion_geometric.hpp
        scg3/extern/glm/glm/ext/quaternion_geometric.inl
        scg3/extern/glm/glm/ext/quaternion_relational.hpp
        scg3/extern/glm/glm/ext/quaternion_relational.inl
        scg3/extern/glm/glm/ext/quaternion_transform.hpp
        scg3/extern/glm/glm/ext/quaternion_transform.inl
        scg3/extern/glm/glm/ext/quaternion_trigonometric.hpp
        scg3/extern/glm/glm/ext/quaternion_trigonometric.inl
        scg3/extern/glm/glm/ext/scalar_common.hpp
        scg3/extern/glm/glm/ext/scalar_common.inl
        scg3/extern/glm/glm/ext/scalar_constants.hpp
        scg3/extern/glm/glm/ext/scalar_constants.inl
        scg3/extern/glm/glm/ext/scalar_int_sized.hpp
        scg3/extern/glm/glm/ext/scalar_relational.hpp
        scg3/extern/glm/glm/ext/scalar_relational.inl
        scg3/extern/glm/glm/ext/scalar_uint_sized.hpp
        scg3/extern/glm/glm/ext/scalar_ulp.hpp
        scg3/extern/glm/glm/ext/scalar_ulp.inl
        scg3/extern/glm/glm/ext/vector_bool1.hpp
        scg3/extern/glm/glm/ext/vector_bool1_precision.hpp
        scg3/extern/glm/glm/ext/vector_bool2.hpp
        scg3/extern/glm/glm/ext/vector_bool2_precision.hpp
        scg3/extern/glm/glm/ext/vector_bool3.hpp
        scg3/extern/glm/glm/ext/vector_bool3_precision.hpp
        scg3/extern/glm/glm/ext/vector_bool4.hpp
        scg3/extern/glm/glm/ext/vector_bool4_precision.hpp
        scg3/extern/glm/glm/ext/vector_common.hpp
        scg3/extern/glm/glm/ext/vector_common.inl
        scg3/extern/glm/glm/ext/vector_double1.hpp
        scg3/extern/glm/glm/ext/vector_double1_precision.hpp
        scg3/extern/glm/glm/ext/vector_double2.hpp
        scg3/extern/glm/glm/ext/vector_double2_precision.hpp
        scg3/extern/glm/glm/ext/vector_double3.hpp
        scg3/extern/glm/glm/ext/vector_double3_precision.hpp
        scg3/extern/glm/glm/ext/vector_double4.hpp
        scg3/extern/glm/glm/ext/vector_double4_precision.hpp
        scg3/extern/glm/glm/ext/vector_float1.hpp
        scg3/extern/glm/glm/ext/vector_float1_precision.hpp
        scg3/extern/glm/glm/ext/vector_float2.hpp
        scg3/extern/glm/glm/ext/vector_float2_precision.hpp
        scg3/extern/glm/glm/ext/vector_float3.hpp
        scg3/extern/glm/glm/ext/vector_float3_precision.hpp
        scg3/extern/glm/glm/ext/vector_float4.hpp
        scg3/extern/glm/glm/ext/vector_float4_precision.hpp
        scg3/extern/glm/glm/ext/vector_int1.hpp
        scg3/extern/glm/glm/ext/vector_int1_precision.hpp
        scg3/extern/glm/glm/ext/vector_int2.hpp
        scg3/extern/glm/glm/ext/vector_int2_precision.hpp
        scg3/extern/glm/glm/ext/vector_int3.hpp
        scg3/extern/glm/glm/ext/vector_int3_precision.hpp
        scg3/extern/glm/glm/ext/vector_int4.hpp
        scg3/extern/glm/glm/ext/vector_int4_precision.hpp
        scg3/extern/glm/glm/ext/vector_relational.hpp
        scg3/extern/glm/glm/ext/vector_relational.inl
        scg3/extern/glm/glm/ext/vector_uint1.hpp
        scg3/extern/glm/glm/ext/vector_uint1_precision.hpp
        scg3/extern/glm/glm/ext/vector_uint2.hpp
        scg3/extern/glm/glm/ext/vector_uint2_precision.hpp
        scg3/extern/glm/glm/ext/vector_uint3.hpp
        scg3/extern/glm/glm/ext/vector_uint3_precision.hpp
        scg3/extern/glm/glm/ext/vector_uint4.hpp
        scg3/extern/glm/glm/ext/vector_uint4_precision.hpp
        scg3/extern/glm/glm/ext/vector_ulp.hpp
        scg3/extern/glm/glm/ext/vector_ulp.inl
        scg3/extern/glm/glm/gtc/bitfield.hpp
        scg3/extern/glm/glm/gtc/bitfield.inl
        scg3/extern/glm/glm/gtc/color_space.hpp
        scg3/extern/glm/glm/gtc/color_space.inl
        scg3/extern/glm/glm/gtc/constants.hpp
        scg3/extern/glm/glm/gtc/constants.inl
        scg3/extern/glm/glm/gtc/epsilon.hpp
        scg3/extern/glm/glm/gtc/epsilon.inl
        scg3/extern/glm/glm/gtc/integer.hpp
        scg3/extern/glm/glm/gtc/integer.inl
        scg3/extern/glm/glm/gtc/matrix_access.hpp
        scg3/extern/glm/glm/gtc/matrix_access.inl
        scg3/extern/glm/glm/gtc/matrix_integer.hpp
        scg3/extern/glm/glm/gtc/matrix_inverse.hpp
        scg3/extern/glm/glm/gtc/matrix_inverse.inl
        scg3/extern/glm/glm/gtc/matrix_transform.hpp
        scg3/extern/glm/glm/gtc/matrix_transform.inl
        scg3/extern/glm/glm/gtc/noise.hpp
        scg3/extern/glm/glm/gtc/noise.inl
        scg3/extern/glm/glm/gtc/packing.hpp
        scg3/extern/glm/glm/gtc/packing.inl
        scg3/extern/glm/glm/gtc/quaternion.hpp
        scg3/extern/glm/glm/gtc/quaternion.inl
        scg3/extern/glm/glm/gtc/quaternion_simd.inl
        scg3/extern/glm/glm/gtc/random.hpp
        scg3/extern/glm/glm/gtc/random.inl
        scg3/extern/glm/glm/gtc/reciprocal.hpp
        scg3/extern/glm/glm/gtc/reciprocal.inl
        scg3/extern/glm/glm/gtc/round.hpp
        scg3/extern/glm/glm/gtc/round.inl
        scg3/extern/glm/glm/gtc/type_aligned.hpp
        scg3/extern/glm/glm/gtc/type_precision.hpp
        scg3/extern/glm/glm/gtc/type_precision.inl
        scg3/extern/glm/glm/gtc/type_ptr.hpp
        scg3/extern/glm/glm/gtc/type_ptr.inl
        scg3/extern/glm/glm/gtc/ulp.hpp
        scg3/extern/glm/glm/gtc/ulp.inl
        scg3/extern/glm/glm/gtc/vec1.hpp
        scg3/extern/glm/glm/gtx/associated_min_max.hpp
        scg3/extern/glm/glm/gtx/associated_min_max.inl
        scg3/extern/glm/glm/gtx/bit.hpp
        scg3/extern/glm/glm/gtx/bit.inl
        scg3/extern/glm/glm/gtx/closest_point.hpp
        scg3/extern/glm/glm/gtx/closest_point.inl
        scg3/extern/glm/glm/gtx/color_encoding.hpp
        scg3/extern/glm/glm/gtx/color_encoding.inl
        scg3/extern/glm/glm/gtx/color_space.hpp
        scg3/extern/glm/glm/gtx/color_space.inl
        scg3/extern/glm/glm/gtx/color_space_YCoCg.hpp
        scg3/extern/glm/glm/gtx/color_space_YCoCg.inl
        scg3/extern/glm/glm/gtx/common.hpp
        scg3/extern/glm/glm/gtx/common.inl
        scg3/extern/glm/glm/gtx/compatibility.hpp
        scg3/extern/glm/glm/gtx/compatibility.inl
        scg3/extern/glm/glm/gtx/component_wise.hpp
        scg3/extern/glm/glm/gtx/component_wise.inl
        scg3/extern/glm/glm/gtx/dual_quaternion.hpp
        scg3/extern/glm/glm/gtx/dual_quaternion.inl
        scg3/extern/glm/glm/gtx/easing.hpp
        scg3/extern/glm/glm/gtx/easing.inl
        scg3/extern/glm/glm/gtx/euler_angles.hpp
        scg3/extern/glm/glm/gtx/euler_angles.inl
        scg3/extern/glm/glm/gtx/extend.hpp
        scg3/extern/glm/glm/gtx/extend.inl
        scg3/extern/glm/glm/gtx/extended_min_max.hpp
        scg3/extern/glm/glm/gtx/extended_min_max.inl
        scg3/extern/glm/glm/gtx/exterior_product.hpp
        scg3/extern/glm/glm/gtx/exterior_product.inl
        scg3/extern/glm/glm/gtx/fast_exponential.hpp
        scg3/extern/glm/glm/gtx/fast_exponential.inl
        scg3/extern/glm/glm/gtx/fast_square_root.hpp
        scg3/extern/glm/glm/gtx/fast_square_root.inl
        scg3/extern/glm/glm/gtx/fast_trigonometry.hpp
        scg3/extern/glm/glm/gtx/fast_trigonometry.inl
        scg3/extern/glm/glm/gtx/float_notmalize.inl
        scg3/extern/glm/glm/gtx/functions.hpp
        scg3/extern/glm/glm/gtx/functions.inl
        scg3/extern/glm/glm/gtx/gradient_paint.hpp
        scg3/extern/glm/glm/gtx/gradient_paint.inl
        scg3/extern/glm/glm/gtx/handed_coordinate_space.hpp
        scg3/extern/glm/glm/gtx/handed_coordinate_space.inl
        scg3/extern/glm/glm/gtx/hash.hpp
        scg3/extern/glm/glm/gtx/hash.inl
        scg3/extern/glm/glm/gtx/integer.hpp
        scg3/extern/glm/glm/gtx/integer.inl
        scg3/extern/glm/glm/gtx/intersect.hpp
        scg3/extern/glm/glm/gtx/intersect.inl
        scg3/extern/glm/glm/gtx/io.hpp
        scg3/extern/glm/glm/gtx/io.inl
        scg3/extern/glm/glm/gtx/log_base.hpp
        scg3/extern/glm/glm/gtx/log_base.inl
        scg3/extern/glm/glm/gtx/matrix_cross_product.hpp
        scg3/extern/glm/glm/gtx/matrix_cross_product.inl
        scg3/extern/glm/glm/gtx/matrix_decompose.hpp
        scg3/extern/glm/glm/gtx/matrix_decompose.inl
        scg3/extern/glm/glm/gtx/matrix_factorisation.hpp
        scg3/extern/glm/glm/gtx/matrix_factorisation.inl
        scg3/extern/glm/glm/gtx/matrix_interpolation.hpp
        scg3/extern/glm/glm/gtx/matrix_interpolation.inl
        scg3/extern/glm/glm/gtx/matrix_major_storage.hpp
        scg3/extern/glm/glm/gtx/matrix_major_storage.inl
        scg3/extern/glm/glm/gtx/matrix_operation.hpp
        scg3/extern/glm/glm/gtx/matrix_operation.inl
        scg3/extern/glm/glm/gtx/matrix_query.hpp
        scg3/extern/glm/glm/gtx/matrix_query.inl
        scg3/extern/glm/glm/gtx/matrix_transform_2d.hpp
        scg3/extern/glm/glm/gtx/matrix_transform_2d.inl
        scg3/extern/glm/glm/gtx/mixed_product.hpp
        scg3/extern/glm/glm/gtx/mixed_product.inl
        scg3/extern/glm/glm/gtx/norm.hpp
        scg3/extern/glm/glm/gtx/norm.inl
        scg3/extern/glm/glm/gtx/normal.hpp
        scg3/extern/glm/glm/gtx/normal.inl
        scg3/extern/glm/glm/gtx/normalize_dot.hpp
        scg3/extern/glm/glm/gtx/normalize_dot.inl
        scg3/extern/glm/glm/gtx/number_precision.hpp
        scg3/extern/glm/glm/gtx/number_precision.inl
        scg3/extern/glm/glm/gtx/optimum_pow.hpp
        scg3/extern/glm/glm/gtx/optimum_pow.inl
        scg3/extern/glm/glm/gtx/orthonormalize.hpp
        scg3/extern/glm/glm/gtx/orthonormalize.inl
        scg3/extern/glm/glm/gtx/perpendicular.hpp
        scg3/extern/glm/glm/gtx/perpendicular.inl
        scg3/extern/glm/glm/gtx/polar_coordinates.hpp
        scg3/extern/glm/glm/gtx/polar_coordinates.inl
        scg3/extern/glm/glm/gtx/projection.hpp
        scg3/extern/glm/glm/gtx/projection.inl
        scg3/extern/glm/glm/gtx/quaternion.hpp
        scg3/extern/glm/glm/gtx/quaternion.inl
        scg3/extern/glm/glm/gtx/range.hpp
        scg3/extern/glm/glm/gtx/raw_data.hpp
        scg3/extern/glm/glm/gtx/raw_data.inl
        scg3/extern/glm/glm/gtx/rotate_normalized_axis.hpp
        scg3/extern/glm/glm/gtx/rotate_normalized_axis.inl
        scg3/extern/glm/glm/gtx/rotate_vector.hpp
        scg3/extern/glm/glm/gtx/rotate_vector.inl
        scg3/extern/glm/glm/gtx/scalar_multiplication.hpp
        scg3/extern/glm/glm/gtx/scalar_relational.hpp
        scg3/extern/glm/glm/gtx/scalar_relational.inl
        scg3/extern/glm/glm/gtx/spline.hpp
        scg3/extern/glm/glm/gtx/spline.inl
        scg3/extern/glm/glm/gtx/std_based_type.hpp
        scg3/extern/glm/glm/gtx/std_based_type.inl
        scg3/extern/glm/glm/gtx/string_cast.hpp
        scg3/extern/glm/glm/gtx/string_cast.inl
        scg3/extern/glm/glm/gtx/texture.hpp
        scg3/extern/glm/glm/gtx/texture.inl
        scg3/extern/glm/glm/gtx/transform.hpp
        scg3/extern/glm/glm/gtx/transform.inl
        scg3/extern/glm/glm/gtx/transform2.hpp
        scg3/extern/glm/glm/gtx/transform2.inl
        scg3/extern/glm/glm/gtx/type_aligned.hpp
        scg3/extern/glm/glm/gtx/type_aligned.inl
        scg3/extern/glm/glm/gtx/type_trait.hpp
        scg3/extern/glm/glm/gtx/type_trait.inl
        scg3/extern/glm/glm/gtx/vec_swizzle.hpp
        scg3/extern/glm/glm/gtx/vector_angle.hpp
        scg3/extern/glm/glm/gtx/vector_angle.inl
        scg3/extern/glm/glm/gtx/vector_query.hpp
        scg3/extern/glm/glm/gtx/vector_query.inl
        scg3/extern/glm/glm/gtx/wrap.hpp
        scg3/extern/glm/glm/gtx/wrap.inl
        scg3/extern/glm/glm/simd/common.h
        scg3/extern/glm/glm/simd/exponential.h
        scg3/extern/glm/glm/simd/geometric.h
        scg3/extern/glm/glm/simd/integer.h
        scg3/extern/glm/glm/simd/matrix.h
        scg3/extern/glm/glm/simd/packing.h
        scg3/extern/glm/glm/simd/platform.h
        scg3/extern/glm/glm/simd/trigonometric.h
        scg3/extern/glm/glm/simd/vector_relational.h
        scg3/extern/glm/glm/common.hpp
        scg3/extern/glm/glm/exponential.hpp
        scg3/extern/glm/glm/ext.hpp
        scg3/extern/glm/glm/fwd.hpp
        scg3/extern/glm/glm/geometric.hpp
        scg3/extern/glm/glm/glm.hpp
        scg3/extern/glm/glm/integer.hpp
        scg3/extern/glm/glm/mat2x2.hpp
        scg3/extern/glm/glm/mat2x3.hpp
        scg3/extern/glm/glm/mat2x4.hpp
        scg3/extern/glm/glm/mat3x2.hpp
        scg3/extern/glm/glm/mat3x3.hpp
        scg3/extern/glm/glm/mat3x4.hpp
        scg3/extern/glm/glm/mat4x2.hpp
        scg3/extern/glm/glm/mat4x3.hpp
        scg3/extern/glm/glm/mat4x4.hpp
        scg3/extern/glm/glm/matrix.hpp
        scg3/extern/glm/glm/packing.hpp
        scg3/extern/glm/glm/trigonometric.hpp
        scg3/extern/glm/glm/vec2.hpp
        scg3/extern/glm/glm/vec3.hpp
        scg3/extern/glm/glm/vec4.hpp
        scg3/extern/glm/glm/vector_relational.hpp
        scg3/extern/stb_image/stb_image.h
        scg3/src/Animation.cpp
        scg3/src/Animation.h
        scg3/src/BumpMapCore.cpp
        scg3/src/BumpMapCore.h
        scg3/src/Camera.cpp
        scg3/src/Camera.h
        scg3/src/CameraController.cpp
        scg3/src/CameraController.h
        scg3/src/ColorCore.cpp
        scg3/src/ColorCore.h
        scg3/src/Composite.cpp
        scg3/src/Composite.h
        scg3/src/Controller.cpp
        scg3/src/Controller.h
        scg3/src/Core.cpp
        scg3/src/Core.h
        scg3/src/CubeMapCore.cpp
        scg3/src/CubeMapCore.h
        scg3/src/GeometryCore.cpp
        scg3/src/GeometryCore.h
        scg3/src/GeometryCoreFactory.cpp
        scg3/src/GeometryCoreFactory.h
        scg3/src/Group.cpp
        scg3/src/Group.h
        scg3/src/InfoTraverser.cpp
        scg3/src/InfoTraverser.h
        scg3/src/KeyboardController.cpp
        scg3/src/KeyboardController.h
        scg3/src/Leaf.cpp
        scg3/src/Leaf.h
        scg3/src/Light.cpp
        scg3/src/Light.h
        scg3/src/LightPosition.cpp
        scg3/src/LightPosition.h
        scg3/src/MaterialCore.cpp
        scg3/src/MaterialCore.h
        scg3/src/MouseController.cpp
        scg3/src/MouseController.h
        scg3/src/Node.cpp
        scg3/src/Node.h
        scg3/src/OrthographicCamera.cpp
        scg3/src/OrthographicCamera.h
        scg3/src/PerspectiveCamera.cpp
        scg3/src/PerspectiveCamera.h
        scg3/src/PreTraverser.cpp
        scg3/src/PreTraverser.h
        scg3/src/Renderer.cpp
        scg3/src/Renderer.h
        scg3/src/RenderState.cpp
        scg3/src/RenderState.h
        scg3/src/RenderTraverser.cpp
        scg3/src/RenderTraverser.h
        scg3/src/scg_doxygen_stub.h
        scg3/src/scg_glew.h
        scg3/src/scg_glm.h
        scg3/src/scg_internals.cpp
        scg3/src/scg_internals.h
        scg3/src/scg_stb_image.cpp
        scg3/src/scg_stb_image.h
        scg3/src/scg_utilities.cpp
        scg3/src/scg_utilities.h
        scg3/src/ShaderCore.cpp
        scg3/src/ShaderCore.h
        scg3/src/ShaderCoreFactory.cpp
        scg3/src/ShaderCoreFactory.h
        scg3/src/Shape.cpp
        scg3/src/Shape.h
        scg3/src/StandardRenderer.cpp
        scg3/src/StandardRenderer.h
        scg3/src/Texture2DCore.cpp
        scg3/src/Texture2DCore.h
        scg3/src/TextureCore.cpp
        scg3/src/TextureCore.h
        scg3/src/TextureCoreFactory.cpp
        scg3/src/TextureCoreFactory.h
        scg3/src/TransformAnimation.cpp
        scg3/src/TransformAnimation.h
        scg3/src/Transformation.cpp
        scg3/src/Transformation.h
        scg3/src/Traverser.cpp
        scg3/src/Traverser.h
        scg3/src/Viewer.cpp
        scg3/src/Viewer.h
        scg3/src/ViewState.cpp
        scg3/src/ViewState.h
        scg3/src_ext/scg_ext_internals.h
        scg3/src_ext/StereoCamera.cpp
        scg3/src_ext/StereoCamera.h
        scg3/src_ext/StereoRenderer.cpp
        scg3/src_ext/StereoRenderer.h
        scg3/src_ext/StereoRendererActive.cpp
        scg3/src_ext/StereoRendererActive.h
        scg3/src_ext/StereoRendererAnaglyph.cpp
        scg3/src_ext/StereoRendererAnaglyph.h
        scg3/src_ext/StereoRendererPassive.cpp
        scg3/src_ext/StereoRendererPassive.h
        scg3_example/src/MatFactory.h
        scg3_example/src/MatFactory.cpp
        scg3_example/src/EnvoirementController.h
        scg3_example/src/EnvoirementController.cpp

        scg3/scg3.h
        scg3/scg3_ext.h
        scg3_example/main.cpp
        scg3_example/src/EnvoirementController.cpp
        scg3_example/src/EnvoirementController.h
        scg3_example/src/MatFactory.cpp
        scg3_example/src/MatFactory.h
        scg3_example/src/TexturFactory.cpp
        scg3_example/src/TexturFactory.h
        scg3_example/src/ShaderFactory.cpp
        scg3_example/src/ShaderFactory.h
        scg3_example/src/SceneObjetFactory.cpp
        scg3_example/src/SceneObjetFactory.h
        scg3_example/src/GameLogic.cpp
        scg3_example/src/GameLogic.h
        scg3_example/src/TorusFactory.cpp
        scg3_example/src/TorusFactory.h
        scg3_example/src/LightFactory.cpp
        scg3_example/src/LightFactory.h
        scg3_example/src/VideoKeyboardController.cpp
        scg3_example/src/VideoKeyboardController.h
        scg3_example/src/FloorKeyboardController.cpp
        scg3_example/src/FloorKeyboardController.h)
find_package(OpenGL REQUIRED)
target_link_libraries(cg3_u3 GLEW GL glfw3 Xxf86vm Xrandr pthread Xi rt dl Xinerama Xcursor X11)